--- a/edge/nginx.conf
+++ b/edge/nginx.conf
@@ -6,12 +6,21 @@ http {
     lua_shared_dict chache_metadata 10m;
 
     resolver 127.0.0.11 ipv6=off;
-
+    
     server {
         listen 80;
 
+        location /origin_proxy/ {
+            internal;
+            proxy_pass http://origin$request_uri;
+        }
+
         location / {
             content_by_lua_file /usr/local/openresty/nginx/lua/handler.lua;
+        }
+
+        location /cached/ {
+            alias /usr/local/openresty/cache/;
         }
     }
 }
